hide item type select & unset properties

--- a/public/index.html
+++ b/public/index.html
@@ -79,13 +79,13 @@
 
     <div class="row" style="margin-top:20px">
         <div class="col-2">
-            <select size="5">
-                <option value="helmet">helmet</option>
-                <option value="gloves">gloves</option>
-                <option value="boots">boots</option>
-                <option value="body">body</option>
-                <option value="weapon">weapon</option>
-            </select>
+            <!--<select size="5">-->
+            <!--<option value="helmet">helmet</option>-->
+            <!--<option value="gloves">gloves</option>-->
+            <!--<option value="boots">boots</option>-->
+            <!--<option value="body">body</option>-->
+            <!--<option value="weapon">weapon</option>-->
+            <!--</select>-->
         </div>
 
         <div class="col-2">
