--- a/public/index.html
+++ b/public/index.html
@@ -89,15 +89,15 @@
         </div>
 
         <div class="col-2">
-            base
+            base (1)
         </div>
 
         <div class="col-2">
-            primary
+            primary (3)
         </div>
 
         <div class="col-2">
-            secondary
+            secondary (n)
         </div>
 
         <div class="col-2">
@@ -107,7 +107,7 @@
 
     <div class="row" style="margin-top:20px">
         <div class="col-2">
-            <button onclick="stepItem()">Rest</button>
+            <button onclick="stepItem()">Reset</button>
         </div>
 
         <div class="col-2">
