--- a/public/index.html
+++ b/public/index.html
@@ -12,68 +12,68 @@
     <div class="row">
         <div class="col-3">
             <input id="glowEarth1" type="checkbox">
-            <label style="margin-left:5px">glow earth-1</label>
+            <label for="glowEarth1" style="margin-left:5px">glow earth-1</label>
         </div>
         <div class="col-3">
             <input id="glowFire1" type="checkbox">
-            <label style="margin-left:5px">glow fire-1</label>
+            <label for="glowFire1" style="margin-left:5px">glow fire-1</label>
         </div>
         <div class="col-3">
             <input id="glowWater1" type="checkbox">
-            <label style="margin-left:5px">glow water-1</label>
+            <label for="glowWater1" style="margin-left:5px">glow water-1</label>
         </div>
         <div class="col-3">
             <input id="glowAir1" type="checkbox">
-            <label style="margin-left:5px">glow air-1</label>
+            <label for="glowAir1" style="margin-left:5px">glow air-1</label>
         </div>
     </div>
 
     <div class="row">
         <div class="col-3">
             <input id="glowEarth2" type="checkbox">
-            <label style="margin-left:5px">glow earth-2</label>
+            <label for="glowEarth2" style="margin-left:5px">glow earth-2</label>
         </div>
         <div class="col-3">
             <input id="glowFire2" type="checkbox">
-            <label style="margin-left:5px">glow fire-2</label>
+            <label for="glowFire2" style="margin-left:5px">glow fire-2</label>
         </div>
         <div class="col-3">
             <input id="glowWater2" type="checkbox">
-            <label style="margin-left:5px">glow water-2</label>
+            <label for="glowWater2" style="margin-left:5px">glow water-2</label>
         </div>
         <div class="col-3">
             <input id="glowAir2" type="checkbox">
-            <label style="margin-left:5px">glow air-2</label>
+            <label for="glowAir2" style="margin-left:5px">glow air-2</label>
         </div>
     </div>
 
     <div class="row">
         <div class="col-3">
             <input id="glowFireEarth" type="checkbox">
-            <label style="margin-left:5px">glow fire-earth</label>
+            <label for="glowFireEarth" style="margin-left:5px">glow fire-earth</label>
         </div>
         <div class="col-3 offset-3">
             <input id="glowWaterAir" type="checkbox">
-            <label style="margin-left:5px">glow water-air</label>
+            <label for="glowWaterAir" style="margin-left:5px">glow water-air</label>
         </div>
     </div>
 
     <div class="row">
         <div class="col-3">
             <input id="glowFireWater" type="checkbox">
-            <label style="margin-left:5px">glow fire-water</label>
+            <label for="glowFireWater" style="margin-left:5px">glow fire-water</label>
         </div>
         <div class="col-3">
             <input id="glowFireAir" type="checkbox">
-            <label style="margin-left:5px">glow fire-air</label>
+            <label for="glowFireAir" style="margin-left:5px">glow fire-air</label>
         </div>
         <div class="col-3">
             <input id="glowWaterEarth" type="checkbox">
-            <label style="margin-left:5px">glow water-earth</label>
+            <label for="glowWaterEarth" style="margin-left:5px">glow water-earth</label>
         </div>
         <div class="col-3">
             <input id="glowAirEarth" type="checkbox">
-            <label style="margin-left:5px">glow air-earth</label>
+            <label for="glowAirEarth" style="margin-left:5px">glow air-earth</label>
         </div>
     </div>
 
