helpful? error messages

--- a/public/index.html
+++ b/public/index.html
@@ -107,23 +107,23 @@
 
     <div class="row" style="margin-top:20px">
         <div class="col-2">
-            <button onclick="stepItem()">Reset</button>
+            <button onclick="stepReset()">Reset</button>
         </div>
 
         <div class="col-2">
-            <button onclick="stepBase()">Next</button>
+            <button onclick="stepBase()">Base</button>
         </div>
 
         <div class="col-2">
-            <button onclick="stepPrimary()">Next</button>
+            <button onclick="stepPrimary()">Primary</button>
         </div>
 
         <div class="col-2">
-            <button onclick="stepSecondary()">Next</button>
+            <button onclick="stepSecondary()">Secondary</button>
         </div>
 
         <div class="col-2">
-            <button onclick="stepEnhance()">Next</button>
+            <button onclick="stepEnhance()">Enhance</button>
         </div>
     </div>
 
@@ -135,5 +135,9 @@
         <span class="col-12" id="property5"></span>
         <span class="col-12" id="property6"></span>
         <span class="col-12" id="property7"></span>
+    </div>
+
+    <div class="row" style="margin-top:20px">
+        <span class="col-12" id="helpText"></span>
     </div>
 </div>
