--- a/public/index.html
+++ b/public/index.html
@@ -111,30 +111,35 @@
         </div>
 
         <div class="col-2">
-            <button onclick="stepBase()">Base</button>
+            <button class="col-12" onclick="stepBase()">Base</button>
+            <button class="col-12" onclick="stepBaseReset()">Reset Base</button>
         </div>
 
         <div class="col-2">
-            <button onclick="stepPrimary()">Primary</button>
+            <button class="col-12" onclick="stepPrimary()">Primary</button>
+            <button class="col-12" onclick="stepPrimaryReset()">Reset Primary</button>
         </div>
 
         <div class="col-2">
-            <button onclick="stepSecondary()">Secondary</button>
+            <button class="col-12" onclick="stepSecondary()">Secondary</button>
+            <button class="col-12" onclick="stepSecondaryReset()">Reset Secondary</button>
         </div>
 
         <div class="col-2">
-            <button onclick="stepEnhance()">Enhance</button>
+            <button class="col-12" onclick="stepEnhance()">Enhance</button>
+            <button class="col-12" onclick="stepEnhanceReset()">Reset Enhance</button>
         </div>
     </div>
 
     <div class="row" style="margin-top:20px">
-        <span class="col-12" id="property1"></span>
-        <span class="col-12" id="property2"></span>
-        <span class="col-12" id="property3"></span>
-        <span class="col-12" id="property4"></span>
-        <span class="col-12" id="property5"></span>
-        <span class="col-12" id="property6"></span>
-        <span class="col-12" id="property7"></span>
+        <span class="col-12">Enchantability: <span id="enchantability" style="margin-left:40px"></span></span>
+        <span class="col-12">Property 1: <span id="property1" style="margin-left:40px"></span></span>
+        <span class="col-12">Property 2: <span id="property2" style="margin-left:40px"></span></span>
+        <span class="col-12">Property 3: <span id="property3" style="margin-left:40px"></span></span>
+        <span class="col-12">Property 4: <span id="property4" style="margin-left:40px"></span></span>
+        <span class="col-12">Property 5: <span id="property5" style="margin-left:40px"></span></span>
+        <span class="col-12">Property 6: <span id="property6" style="margin-left:40px"></span></span>
+        <span class="col-12">Property 7: <span id="property7" style="margin-left:40px"></span></span>
     </div>
 
     <div class="row" style="margin-top:20px">
