--- a/public/index.html
+++ b/public/index.html
@@ -10,68 +10,68 @@
 
 <div style="margin:30px">
     <div class="row">
-        <div class="col-3">
+        <div class="col-2">
             <input id="glowEarth1" type="checkbox">
             <label for="glowEarth1" style="margin-left:5px">glow earth-1</label>
         </div>
-        <div class="col-3">
+        <div class="col-2">
             <input id="glowFire1" type="checkbox">
             <label for="glowFire1" style="margin-left:5px">glow fire-1</label>
         </div>
-        <div class="col-3">
+        <div class="col-2">
             <input id="glowWater1" type="checkbox">
             <label for="glowWater1" style="margin-left:5px">glow water-1</label>
         </div>
-        <div class="col-3">
+        <div class="col-2">
             <input id="glowAir1" type="checkbox">
             <label for="glowAir1" style="margin-left:5px">glow air-1</label>
         </div>
     </div>
 
     <div class="row">
-        <div class="col-3">
+        <div class="col-2">
             <input id="glowEarth2" type="checkbox">
             <label for="glowEarth2" style="margin-left:5px">glow earth-2</label>
         </div>
-        <div class="col-3">
+        <div class="col-2">
             <input id="glowFire2" type="checkbox">
             <label for="glowFire2" style="margin-left:5px">glow fire-2</label>
         </div>
-        <div class="col-3">
+        <div class="col-2">
             <input id="glowWater2" type="checkbox">
             <label for="glowWater2" style="margin-left:5px">glow water-2</label>
         </div>
-        <div class="col-3">
+        <div class="col-2">
             <input id="glowAir2" type="checkbox">
             <label for="glowAir2" style="margin-left:5px">glow air-2</label>
         </div>
     </div>
 
     <div class="row">
-        <div class="col-3">
+        <div class="col-2">
             <input id="glowFireEarth" type="checkbox">
             <label for="glowFireEarth" style="margin-left:5px">glow fire-earth</label>
         </div>
-        <div class="col-3 offset-3">
+        <div class="col-2 offset-2">
             <input id="glowWaterAir" type="checkbox">
             <label for="glowWaterAir" style="margin-left:5px">glow water-air</label>
         </div>
     </div>
 
     <div class="row">
-        <div class="col-3">
+        <div class="col-2">
             <input id="glowFireWater" type="checkbox">
             <label for="glowFireWater" style="margin-left:5px">glow fire-water</label>
         </div>
-        <div class="col-3">
+        <div class="col-2">
             <input id="glowFireAir" type="checkbox">
             <label for="glowFireAir" style="margin-left:5px">glow fire-air</label>
         </div>
-        <div class="col-3">
+        <div class="col-2">
             <input id="glowWaterEarth" type="checkbox">
             <label for="glowWaterEarth" style="margin-left:5px">glow water-earth</label>
         </div>
-        <div class="col-3">
+        <div class="col-2">
             <input id="glowAirEarth" type="checkbox">
             <label for="glowAirEarth" style="margin-left:5px">glow air-earth</label>
         </div>
@@ -132,15 +132,28 @@
     </div>
 
     <div class="row" style="margin-top:20px">
-        <span class="col-12">Item Type: <span id="itemType" style="margin-left:40px"></span></span>
-        <span class="col-12">Enchantability: <span id="enchantability" style="margin-left:40px"></span></span>
-        <span class="col-12">Property 1: <span id="property1" style="margin-left:40px"></span></span>
-        <span class="col-12">Property 2: <span id="property2" style="margin-left:40px"></span></span>
-        <span class="col-12">Property 3: <span id="property3" style="margin-left:40px"></span></span>
-        <span class="col-12">Property 4: <span id="property4" style="margin-left:40px"></span></span>
-        <span class="col-12">Property 5: <span id="property5" style="margin-left:40px"></span></span>
-        <span class="col-12">Property 6: <span id="property6" style="margin-left:40px"></span></span>
-        <span class="col-12">Property 7: <span id="property7" style="margin-left:40px"></span></span>
+        <div class="col-2">
+            <div class="row"><span class="col-12">Item Type:</span></div>
+            <div class="row"><span class="col-12">Enchantability:</span></div>
+            <div class="row"><span class="col-12">Property 1:</span></div>
+            <div class="row"><span class="col-12">Property 2:</span></div>
+            <div class="row"><span class="col-12">Property 3:</span></div>
+            <div class="row"><span class="col-12">Property 4:</span></div>
+            <div class="row"><span class="col-12">Property 5:</span></div>
+            <div class="row"><span class="col-12">Property 6:</span></div>
+            <div class="row"><span class="col-12">Property 7:</span></div>
+        </div>
+        <div class="col-4">
+            <div class="row"><span class="col-12" id="itemType"></span></div>
+            <div class="row"><span class="col-12" id="enchantability"></span></div>
+            <div class="row"><span class="col-12" id="property1"></span></div>
+            <div class="row"><span class="col-12" id="property2"></span></div>
+            <div class="row"><span class="col-12" id="property3"></span></div>
+            <div class="row"><span class="col-12" id="property4"></span></div>
+            <div class="row"><span class="col-12" id="property5"></span></div>
+            <div class="row"><span class="col-12" id="property6"></span></div>
+            <div class="row"><span class="col-12" id="property7"></span></div>
+        </div>
     </div>
 
     <div class="row" style="margin-top:20px">
