--- a/public/index.html
+++ b/public/index.html
@@ -88,21 +88,21 @@
             </select>
         </div>
 
-        <div class="col-2">
-            base (1)
-        </div>
+        <!--<div class="col-2">-->
+            <!--base (1)-->
+        <!--</div>-->
 
-        <div class="col-2">
-            primary (3)
-        </div>
+        <!--<div class="col-2">-->
+            <!--primary (3)-->
+        <!--</div>-->
 
-        <div class="col-2">
-            secondary (n)
-        </div>
+        <!--<div class="col-2">-->
+            <!--secondary (n)-->
+        <!--</div>-->
 
-        <div class="col-2">
-            enhance
-        </div>
+        <!--<div class="col-2">-->
+            <!--enhance-->
+        <!--</div>-->
     </div>
 
     <div class="row" style="margin-top:20px">
@@ -111,22 +111,22 @@
         </div>
 
         <div class="col-2">
-            <button class="col-12" onclick="stepBase()">Base</button>
+            <button class="col-12" onclick="stepBase()">Base (1)</button>
             <button class="col-12" onclick="stepBaseReset()">Reset Base</button>
         </div>
 
         <div class="col-2">
-            <button class="col-12" onclick="stepPrimary()">Primary</button>
+            <button class="col-12" onclick="stepPrimary()">Primary (3)</button>
             <button class="col-12" onclick="stepPrimaryReset()">Reset Primary</button>
         </div>
 
         <div class="col-2">
-            <button class="col-12" onclick="stepSecondary()">Secondary</button>
+            <button class="col-12" onclick="stepSecondary()">Secondary (1+)</button>
             <button class="col-12" onclick="stepSecondaryReset()">Reset Secondary</button>
         </div>
 
         <div class="col-2">
-            <button class="col-12" onclick="stepEnhance()">Enhance</button>
+            <button class="col-12" onclick="stepEnhance()">Enhance (N/A)</button>
             <button class="col-12" onclick="stepEnhanceReset()">Reset Enhance</button>
         </div>
     </div>
@@ -144,15 +144,15 @@
             <div class="row"><span class="col-12">Property 7:</span></div>
         </div>
         <div class="col-4">
-            <div class="row"><span class="col-12" id="itemType"></span></div>
-            <div class="row"><span class="col-12" id="enchantability"></span></div>
-            <div class="row"><span class="col-12" id="property1"></span></div>
-            <div class="row"><span class="col-12" id="property2"></span></div>
-            <div class="row"><span class="col-12" id="property3"></span></div>
-            <div class="row"><span class="col-12" id="property4"></span></div>
-            <div class="row"><span class="col-12" id="property5"></span></div>
-            <div class="row"><span class="col-12" id="property6"></span></div>
-            <div class="row"><span class="col-12" id="property7"></span></div>
+            <div class="row"><div class="col-12" id="itemType"></div></div>
+            <div class="row"><div class="col-12" id="enchantability"></div></div>
+            <div class="row"><div class="col-12" id="property1"></div></div>
+            <div class="row"><div class="col-12" id="property2"></div></div>
+            <div class="row"><div class="col-12" id="property3"></div></div>
+            <div class="row"><div class="col-12" id="property4"></div></div>
+            <div class="row"><div class="col-12" id="property5"></div></div>
+            <div class="row"><div class="col-12" id="property6"></div></div>
+            <div class="row"><div class="col-12" id="property7"></div></div>
         </div>
     </div>
 
