--- a/public/index.html
+++ b/public/index.html
@@ -79,35 +79,14 @@
 
     <div class="row" style="margin-top:20px">
         <div class="col-2">
-            <select size="5" id="itemTypeSelect">
+            <select class="col-12" size="4" id="itemTypeSelect">
                 <option value="helmet" selected>helmet</option>
                 <option value="gloves">gloves</option>
                 <option value="boots">boots</option>
                 <option value="body">body</option>
                 <!--<option value="weapon">weapon</option>-->
             </select>
-        </div>
-
-        <!--<div class="col-2">-->
-            <!--base (1)-->
-        <!--</div>-->
-
-        <!--<div class="col-2">-->
-            <!--primary (3)-->
-        <!--</div>-->
-
-        <!--<div class="col-2">-->
-            <!--secondary (n)-->
-        <!--</div>-->
-
-        <!--<div class="col-2">-->
-            <!--enhance-->
-        <!--</div>-->
-    </div>
-
-    <div class="row" style="margin-top:20px">
-        <div class="col-2">
-            <button onclick="stepReset()">Reset</button>
+            <button class="col-12" onclick="stepReset()">Reset</button>
         </div>
 
         <div class="col-2">
@@ -144,15 +123,33 @@
             <div class="row"><span class="col-12">Property 7:</span></div>
         </div>
         <div class="col-4">
-            <div class="row"><div class="col-12" id="itemType"></div></div>
-            <div class="row"><div class="col-12" id="enchantability"></div></div>
-            <div class="row"><div class="col-12" id="property1"></div></div>
-            <div class="row"><div class="col-12" id="property2"></div></div>
-            <div class="row"><div class="col-12" id="property3"></div></div>
-            <div class="row"><div class="col-12" id="property4"></div></div>
-            <div class="row"><div class="col-12" id="property5"></div></div>
-            <div class="row"><div class="col-12" id="property6"></div></div>
-            <div class="row"><div class="col-12" id="property7"></div></div>
+            <div class="row">
+                <div class="col-12" id="itemType"></div>
+            </div>
+            <div class="row">
+                <div class="col-12" id="enchantability"></div>
+            </div>
+            <div class="row">
+                <div class="col-12" id="property1"></div>
+            </div>
+            <div class="row">
+                <div class="col-12" id="property2"></div>
+            </div>
+            <div class="row">
+                <div class="col-12" id="property3"></div>
+            </div>
+            <div class="row">
+                <div class="col-12" id="property4"></div>
+            </div>
+            <div class="row">
+                <div class="col-12" id="property5"></div>
+            </div>
+            <div class="row">
+                <div class="col-12" id="property6"></div>
+            </div>
+            <div class="row">
+                <div class="col-12" id="property7"></div>
+            </div>
         </div>
     </div>
 
