--- a/public/index.html
+++ b/public/index.html
@@ -154,6 +154,10 @@
     </div>
 
     <div class="row" style="margin-top:20px">
+        <span class="col-12" id="errorText"></span>
+    </div>
+    
+    <div class="row" style="margin-top:20px">
         <span class="col-12" id="helpText"></span>
     </div>
 </div>
